fix: update z-index values in Search.module.css and Homepage.module.css for improved layering

--- a/apps/client/src/entities/header/search-input/Search/Search.module.css
+++ b/apps/client/src/entities/header/search-input/Search/Search.module.css
@@ -55,7 +55,7 @@
   position: absolute;
   color: #adadad;
   left: 22px;
-  z-index: 20;
+  z-index: 52;
 
   @media (max-width: 1024px) {
     left: 16px;
