--- a/apps/client/src/pages/home/ui/Homepage.module.css
+++ b/apps/client/src/pages/home/ui/Homepage.module.css
@@ -37,7 +37,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 50;
+    z-index: 100;
     opacity: 0;
     visibility: hidden;
     transform: translateY(-10px);
